# DynamisFX

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  THIRDPARTY-LICENSE.txt  fxyz-license.txt  pom.xml
.github/workflows/: ci.yml
DynamisFX-Client/src/main/java/: module-info.java
DynamisFX-Client/src/main/java/org/dynamisfx/: DynamisFXSample.java  DynamisFXSampleBase.java  DynamisFXSamplerProject.java  FXyzSample.java  FXyzSampleBase.java  FXyzSamplerProject.java  SampleGizmoSupport.java
DynamisFX-Client/src/main/java/org/dynamisfx/ExtrasAndTests/: AbstractClientController.java  AbstractPopoutClient.java  Client.java  CustomWindow.java  DynamisFXSampler_backup.java  MainSceneController.java  SimpleSamplerClient.java  SimpleSliderClient.java
DynamisFX-Client/src/main/java/org/dynamisfx/client/: DynamisFXClient.java  FXyzClient.java  HiddenSidesClient.java  ModelInfoTracker.java  SimpleWindowFrame.java
DynamisFX-Client/src/main/java/org/dynamisfx/model/: EmptySample.java  Project.java  SampleTree.java  WelcomePage.java
DynamisFX-Client/src/main/java/org/dynamisfx/util/: SampleScanner.java
DynamisFX-Client/src/main/resources/org/dynamisfx/: smokeBlueGlassControls.css
DynamisFX-Client/src/test/java/org/dynamisfx/client/: DynamisFXClientResourceTest.java
DynamisFX-Client/src/test/java/org/dynamisfx/model/: ProjectTest.java
DynamisFX-Compat/src/main/java/: module-info.java
DynamisFX-Compat/src/main/java/org/fxyz3d/: FXyzSample.java  FXyzSampleBase.java  FXyzSamplerProject.java
DynamisFX-Compat/src/test/java/org/fxyz3d/: CompatTypesTest.java
DynamisFX-Core/: pom.xml
DynamisFX-Core/src/main/java/: module-info.java
DynamisFX-Demo/: pom.xml
DynamisFX-Demo/src/main/java/: module-info.java
DynamisFX-Importers/: pom.xml
DynamisFX-Importers/src/main/java/: module-info.java
DynamisFX-Physics-Jolt/: README.md  pom.xml
DynamisFX-Physics-Jolt/native/: CMakeLists.txt  README.md  jolt_c_api.h
DynamisFX-Physics-Jolt/native/src/: jolt_c_api.cpp  jolt_c_api_real.cpp  jolt_jni_bridge.cpp  jolt_real_probe.cpp
DynamisFX-Physics-Jolt/panama/: README.md  jextract.sh
DynamisFX-Physics-ODE4j/: pom.xml
DynamisFX-Samples/: pom.xml
FXyz-Client/: pom.xml
FXyz-Client/src/main/java/: module-info.java
FXyz-Client/src/main/java/org/dynamisfx/: DynamisFXSample.java  DynamisFXSampleBase.java  DynamisFXSamplerProject.java  FXyzSample.java  FXyzSampleBase.java  FXyzSamplerProject.java  SampleGizmoSupport.java
FXyz-Client/src/main/java/org/fxyz3d/: FXyzSample.java  FXyzSampleBase.java  SampleGizmoSupport.java
FXyz-Compat/: pom.xml
FXyz-Compat/src/main/java/org/fxyz3d/: FXyzSample.java
FXyz-Core/: pom.xml
FXyz-Core/src/main/java/: module-info.java
FXyz-Importers/: pom.xml
FXyz-Importers/src/main/java/: module-info.java
FXyz-Physics-ODE4j/: pom.xml
FXyz-Physics-Orekit/: pom.xml
FXyz-Samples/: pom.xml
FXyz-Samples/src/main/java/: module-info.java
docs/: Core_Collision.md  DynamisFX_PhaseB_Execution_Checklist.md  DynamisFX_Rename_Plan.md  FBX_plan.md  Import_Export_Roadmap.md  Jolt_PhysX_plan.md  Physics_Integration_Plan.md  Physics_Migration_Guide.md  Release_Candidate_Checklist.md  Rename_Migration_Guide.md  Runtime_Diagnostics_Runbook.md  Simulation_Architecture_Plan.md  USD_plan.md
scripts/: update-license-headers.py  update-license-headers.sh
(+1333 files in other folders)
